task5/deploy/discovery/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: discovery
  name: discovery
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
        - image: gm-discovery:v1
          name: discovery
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
