task5/deploy/discovery/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: discovery
                port:
                  number: 8761
